# tree_master_version

./: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Dockerfile  README.md  build  conanfile.txt  cppcheck_include.txt  cppcheck_suppress.txt  docker-build  docker-run  docker-stop  inst_dNs.sh  sparsepp.cmake
cmake/: colors.cmake  cppcheck.cmake  degree.cmake  download_project.cmake  dump.cmake  log.cmake  modules.cmake  out_of_source_dir.cmake  pedantic.cmake
src/: CMakeLists.txt
src/include/: prefix.hpp  prefix_impl.hpp
src/test/: CMakeLists.txt  bench.cpp  prefixes.cpp  prefixes.hpp  test.cpp
